# map-editor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-arm.json  vcpkg.json
.github/: .releaserc  renovate.json
.github/workflows/: build-release.yaml  build-windows-cmake.yml  code-quality.yaml  code-tests.yaml  commit-lint.yaml  mac-amd-release.yaml  mac-release.yaml
data/: clients.xml
data/1098/: tibia.otfi  walls.xml
data/assets/creatures/: creatures.xml
data/assets/items/: items.otb  items.xml
data/creatures/: creatures.xml
data/materials/: borders.xml  grounds.xml  tilesets.xml
source/: CMakeLists.txt  about_window.cpp  add_item_window.cpp  add_tileset_window.cpp  application.cpp  client_version.cpp  client_version.h  definitions.h  graphics.cpp  gui.cpp  items.cpp  main.cpp  old_properties_window.cpp  palette_brushlist.cpp  tileset_window.cpp
